PL-113: In AuditRecord replace fields with their names