@@ -1,7 +1,10 @@
 package com.kenshoo.pl.entity.internal.audit;
 
 import com.google.common.collect.ImmutableList;
-import com.kenshoo.pl.entity.*;
+import com.kenshoo.pl.entity.ChangeContext;
+import com.kenshoo.pl.entity.CurrentEntityState;
+import com.kenshoo.pl.entity.EntityChange;
+import com.kenshoo.pl.entity.FinalEntityState;
 import com.kenshoo.pl.entity.audit.AuditRecord;
 import com.kenshoo.pl.entity.audit.FieldAuditRecord;
 import com.kenshoo.pl.entity.internal.EntityIdExtractor;
@@ -15,12 +18,14 @@ import org.mockito.junit.MockitoJUnitRunner;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.Map.Entry;
 import java.util.Optional;
 
 import static com.github.npathai.hamcrestopt.OptionalMatchers.isPresentAnd;
 import static com.kenshoo.pl.entity.ChangeOperation.CREATE;
 import static com.kenshoo.pl.entity.matchers.audit.AuditRecordMatchers.*;
 import static java.util.Collections.emptyList;
+import static java.util.Map.entry;
 import static org.hamcrest.CoreMatchers.allOf;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.mock;
@@ -78,7 +83,7 @@ public class AuditRecordGeneratorImplForCreateTest {
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(emptyList());
         when(fieldChangesGenerator.generate(currentState, finalState)).thenReturn(emptyList());
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, emptyList());
 
         assertThat(actualOptionalAuditRecord,
@@ -89,14 +94,14 @@ public class AuditRecordGeneratorImplForCreateTest {
 
     @Test
     public void generate_WithMandatoryOnly_ShouldReturnMandatoryFieldValues() {
-        final Collection<EntityFieldValue> expectedMandatoryFieldValues =
-            ImmutableList.of(new EntityFieldValue(NotAuditedAncestorType.NAME, ANCESTOR_NAME),
-                             new EntityFieldValue(NotAuditedAncestorType.DESC, ANCESTOR_DESC));
+        final Collection<Entry<String, ?>> expectedMandatoryFieldValues =
+            List.of(entry(NotAuditedAncestorType.NAME.toString(), ANCESTOR_NAME),
+                    entry(NotAuditedAncestorType.DESC.toString(), ANCESTOR_DESC));
 
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(expectedMandatoryFieldValues);
         when(fieldChangesGenerator.generate(currentState, finalState)).thenReturn(emptyList());
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, emptyList());
 
         assertThat(actualOptionalAuditRecord,
@@ -106,7 +111,7 @@ public class AuditRecordGeneratorImplForCreateTest {
 
     @Test
     public void generate_WithFieldChangesOnly_ShouldReturnFieldChanges() {
-        final Collection<FieldAuditRecord<AuditedType>> expectedFieldChanges =
+        final Collection<FieldAuditRecord> expectedFieldChanges =
             ImmutableList.of(FieldAuditRecord.builder(AuditedType.NAME)
                                              .newValue(NAME)
                                              .build(),
@@ -117,7 +122,7 @@ public class AuditRecordGeneratorImplForCreateTest {
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(emptyList());
         when(fieldChangesGenerator.generate(currentState, finalState)).thenReturn(expectedFieldChanges);
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, emptyList());
 
         assertThat(actualOptionalAuditRecord,
@@ -130,9 +135,9 @@ public class AuditRecordGeneratorImplForCreateTest {
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(emptyList());
         when(fieldChangesGenerator.generate(currentState, finalState)).thenReturn(emptyList());
 
-        final List<AuditRecord<?>> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
+        final List<AuditRecord> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, childRecords);
 
         assertThat(actualOptionalAuditRecord,
@@ -142,11 +147,11 @@ public class AuditRecordGeneratorImplForCreateTest {
 
     @Test
     public void generate_WithMandatoryAndFieldChangesOnly_ShouldReturnMandatoryFieldValuesAndFieldChanges() {
-        final Collection<EntityFieldValue> expectedMandatoryFieldValues =
-            ImmutableList.of(new EntityFieldValue(NotAuditedAncestorType.NAME, ANCESTOR_NAME),
-                             new EntityFieldValue(NotAuditedAncestorType.DESC, ANCESTOR_DESC));
+        final Collection<Entry<String, ?>> expectedMandatoryFieldValues =
+            List.of(entry(NotAuditedAncestorType.NAME.toString(), ANCESTOR_NAME),
+                    entry(NotAuditedAncestorType.DESC.toString(), ANCESTOR_DESC));
 
-        final Collection<FieldAuditRecord<AuditedType>> expectedFieldChanges =
+        final Collection<FieldAuditRecord> expectedFieldChanges =
             ImmutableList.of(FieldAuditRecord.builder(AuditedType.NAME)
                                              .newValue(NAME)
                                              .build(),
@@ -157,7 +162,7 @@ public class AuditRecordGeneratorImplForCreateTest {
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(expectedMandatoryFieldValues);
         when(fieldChangesGenerator.generate(currentState, finalState)).thenReturn(expectedFieldChanges);
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, emptyList());
 
         assertThat(actualOptionalAuditRecord,
@@ -169,11 +174,11 @@ public class AuditRecordGeneratorImplForCreateTest {
 
     @Test
     public void generate_WithEverything_ShouldReturnEverything() {
-        final Collection<EntityFieldValue> expectedMandatoryFieldValues =
-            ImmutableList.of(new EntityFieldValue(NotAuditedAncestorType.NAME, ANCESTOR_NAME),
-                             new EntityFieldValue(NotAuditedAncestorType.DESC, ANCESTOR_DESC));
+        final Collection<Entry<String, ?>> expectedMandatoryFieldValues =
+            List.of(entry(NotAuditedAncestorType.NAME.toString(), ANCESTOR_NAME),
+                    entry(NotAuditedAncestorType.DESC.toString(), ANCESTOR_DESC));
 
-        final Collection<FieldAuditRecord<AuditedType>> expectedFieldChanges =
+        final Collection<FieldAuditRecord> expectedFieldChanges =
             ImmutableList.of(FieldAuditRecord.builder(AuditedType.NAME)
                                              .newValue(NAME)
                                              .build(),
@@ -184,9 +189,9 @@ public class AuditRecordGeneratorImplForCreateTest {
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(expectedMandatoryFieldValues);
         when(fieldChangesGenerator.generate(currentState, finalState)).thenReturn(expectedFieldChanges);
 
-        final List<AuditRecord<?>> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
+        final List<AuditRecord> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, childRecords);
 
         assertThat(actualOptionalAuditRecord,
@@ -198,7 +203,7 @@ public class AuditRecordGeneratorImplForCreateTest {
                                       hasSameChildRecord(childRecords.get(1)))));
     }
 
-    private AuditRecord<?> mockChildRecord() {
+    private AuditRecord mockChildRecord() {
         return mock(AuditRecord.class);
     }
 }
